Kubernetes/Project/client-pod.yml
apiVersion: v1
kind: Pod
metadata:
    name: client-pod
    labels:
        component: web
spec:
    containers:
      - name: client
        image: thripura248/complex_client
        ports:
            - containerPort: 3000
        resources:
            limits:
                memory: "128Mi"
                cpu: "500m"
