Kubernetes/Project/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: server
          image: thripura248/complex_api
          resources:
                  limits:
                    memory: "128Mi"
                    cpu: "500m"
          ports:
            - containerPort: 5000
