Kubernetes/Project/worker-deployement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: thripura248/complex_worker
          resources:
                  limits:
                    memory: "128Mi"
                    cpu: "500m"
